// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Serlina dev mode nested page 1`] = `
"<!DOCTYPE html><html><head><title data-react-helmet=\\"true\\"></title><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">User List</div></div><script src=\\"http://127.0.0.1:3000/_SERLINA_VENDOR.js\\"></script><script src=\\"http://127.0.0.1:3000/user/list.js\\"></script><script src=\\"http://127.0.0.1:3000/_SERLINA_MAIN.js\\"></script></body></html>"
`;

exports[`Serlina dev mode snapshot 1`] = `
"<!DOCTYPE html><html><head><title data-react-helmet=\\"true\\"></title><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page1</div></div><script src=\\"http://127.0.0.1:3000/_SERLINA_VENDOR.js\\"></script><script src=\\"http://127.0.0.1:3000/page1.js\\"></script><script src=\\"http://127.0.0.1:3000/_SERLINA_MAIN.js\\"></script></body></html>"
`;

exports[`Serlina dev mode snapshot 2`] = `
"<!DOCTYPE html><html><head><title data-react-helmet=\\"true\\"></title><link rel=\\"stylesheet\\" href=\\"http://127.0.0.1:3000/page2.css\\"/><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {\\"foo\\":\\"foo\\"};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page2 - <!-- -->foo</div></div><script src=\\"http://127.0.0.1:3000/_SERLINA_VENDOR.js\\"></script><script src=\\"http://127.0.0.1:3000/page2.js\\"></script><script src=\\"http://127.0.0.1:3000/_SERLINA_MAIN.js\\"></script></body></html>"
`;
